# polsl-pk4

./: .gitignore  README.md
Projekt/: .gitignore  CMakeLists.txt  README.md  docker-compose.prod.yml  docker-compose.yml  flake.nix  temat.md
Projekt/.devcontainer/: devcontainer.json
Projekt/api/: activate.sh  auth.py  deactivate.sh  dummyfuncs.py  main.py  nlp-platform.service  requirements.txt  rpc.py  sentiment.py  sessions.example.json  users.example.json
Projekt/docs/1. Opis Projektu/: opis_dg.tex  opis_projektu.tex
Projekt/docs/2. Projekt wstępny/: projekt_wstepny_dg.tex  projekt_wstepny_mc.fdb_latexmk  projekt_wstepny_mc.fls  projekt_wstepny_mc.tex
Projekt/docs/3. Prezentacja/: Michał Czyż Platforma NLP.pptx  Platforma NLP - pres.pptx
Projekt/docs/4. Sprawozdanie/: sprawozdanie.fdb_latexmk  sprawozdanie.fls  sprawozdanie.tex
Projekt/docs/Papyrus Diagrams/: nlp-platform.uml
Projekt/docs/Papyrus Diagrams/final/: .project  NLP-Final.notation  NLP-Final.uml
Projekt/docs/Plant UML/: class_diagram.pu
Projekt/docs/UML Diagrams/: diagrams.tex
Projekt/imgs/: favicon.kra
Projekt/models/: activate.sh  requirements.txt
Projekt/nlp/: generator-makefile.sh
Projekt/nlp/include/Communication/: Beast.hpp  Communication.hpp  Dummy.hpp  Zmq.hpp  mdp.h  rpc.hpp  rpcWorker.hpp  zmsg.hpp  (+1 more)
Projekt/nlp/models/: activate.sh  anonymize.py  hello.py  requirements.txt
Projekt/nlp/src/: main.cpp
Projekt/src/: main.cpp  rpc.h  sentiment.h
Projekt/uml/: .project  nlp-platform.notation
Projekt/web/: package-lock.json  package.json
Projekt/web/src/: theme.js
(+118 files in other folders)
